# Band-Former

./: .dockerignore  .gitignore  Dockerfile  HANDOFF.md  OVERHAUL.md  PIANO_TILES_PLAN.md  README.md  analyze.py  arrange.py  constraints.txt  render_tab.py  requirements.txt  run_pipeline.py  start.bat  tuning.json  tuning.py
pipeline/: __init__.py  config.py
pipeline/stages/: __init__.py  beat_tracking.py  pitch_extraction.py  separation.py
server/: app.py
server/static/: app.js  index.html  style.css
tab_engine/: CMakeLists.txt  CMakePresets.json  vcpkg.json
tab_engine/include/: chord_classifier.hpp  chroma_analyzer.hpp  fingering_solver.hpp  fret_graph.hpp  guitar.hpp  note_eliminator.hpp  note_event.hpp
tab_engine/src/: chord_classifier.cpp  chroma_analyzer.cpp  fingering_solver.cpp  fret_graph.cpp  guitar.cpp  main.cpp  note_eliminator.cpp
tiles/: extract.py
tools/: eval.py
